--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     position: absolute;
     top: 0;
     z-index: -999;
-    filter: brightness(0.2);
+    filter: brightness(0.3);
     margin-left: 0;
     padding-left: 0;
 }
@@ -114,6 +114,26 @@ code {
     font-family: "Roboto Mono" !important;
     border-radius: 5px;
     text-shadow: none !important;
+}
+
+table {
+    border-collapse: collapse;
+    margin-left: 30px;
+}
+
+table, th, td {
+    border: 1px solid white;
+    border-radius: 10px;
+    text-align: center;
+}
+
+th, td {
+    padding: 2.5px 10px;
+    height: 50px;
+}
+
+tr td:last-child {
+    text-align: left;
 }
 
 /* ------------------ IMAGES ------------------ */
